Updating styles for posts to add spacing and a border, as well as fixing figcaption from breaking the post on small screens.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,7 @@ img {
   --accent: #a30047;
   --background: #f2f2f2;
   --text: #222222;
+  --text-light: #a8a8a8;
 
   --one-edge-padding: 1.5rem;
   --both-side-spaing: calc(var(--one-edge-padding) * 2);
